--- a/pages/resume.tex
+++ b/pages/resume.tex
@@ -12,10 +12,10 @@
 \pagenumbering{gobble}
 \geometry{left=0.5in, top=0.3in, right=0.5in, bottom=0.3in}
 \hypersetup{
-    colorlinks=true,
-    linkcolor=black,
-    filecolor=magenta,
-    urlcolor=black,
+  colorlinks=true,
+  linkcolor=black,
+  filecolor=magenta,
+  urlcolor=black,
 }
 
 \begin{document}
@@ -24,15 +24,16 @@
 
 \begin{LARGE}
 
-\textsc{\textbf{Taehoon (Tae) Song}}
+  \textsc{\textbf{Taehoon
+  (Tae) Song}}
 
 \end{LARGE}
 
 \vspace{1mm}
 
 \begin{small}
-\qquad
-\href{https://taehoonsong.com}{TaehoonSong.com}\qquad\textbar\qquad\href{mailto:DataEngineer@TaehoonSong.com}{DataEngineer@TaehoonSong.com}\qquad\textbar\qquad{Washington, DC}\ \qquad
+  \qquad
+  \href{https://taehoonsong.com}{TaehoonSong.com}\qquad\textbar\qquad\href{mailto:DataEngineer@TaehoonSong.com}{DataEngineer@TaehoonSong.com}\qquad\textbar\qquad{Washington, DC}\ \qquad
 \end{small}
 
 \raggedright
@@ -43,34 +44,34 @@
 \hrulefill
 
 \begin{large}
-\textsc{\textbf{Current Work Experience}}
-\vspace{-3mm}
+  \textsc{\textbf{Current Work Experience}}
+  \vspace{-3mm}
 \end{large}
 
 \textcolor{lightgray}{\hrulefill}\\
-\vspace{1mm}
-
 
 \begin{small}
+  
+  \textbf{Cohen Milstein Sellers \& Toll, PLLC} \hfill
+  \textcolor{gray}{Washington, DC}\\
+  \textit{Data Engineer} \hfill
+  \textcolor{gray}{Sep 2022 -- Present}\\
+  \vspace{-1mm}
 
-\textbf{Cohen Milstein Sellers \& Toll, PLLC} \hfill \textcolor{gray}{Washington, DC}\\
-\textit{Data Engineer} \hfill \textcolor{gray}{Sep 2022 -- Present}\\
-\vspace{-1mm}
-
-\begin{itemize}
-\setlength\itemsep{-1mm}
-
-\item Lead the design, implementation, maintenance, and optimization of data pipelines, databases, and application infrastructures.
-
-\item Develop Python apps that automate existing processes, create data solutions for ligitation support, or assist in case development.
-
-\item Refactor, modernize, and optimize legacy Python, SQL, and VBA code to be more secure and performant.
-
-\item Evaluate AI solutions for the Firm with respect to data privacy, security, and usefulness as a member of the Firm's AI Committee.
-
-\end{itemize}
-\vspace{-1mm}
-
+  \begin{itemize}
+      \setlength\itemsep{-1mm}
+      
+    \item Lead the design, implementation, maintenance, and optimization of data pipelines, databases, and application infrastructures.
+      
+    \item Develop Python apps that automate existing processes, create data solutions for ligitation support, or assist in case development.
+      
+    \item Modernize legacy Python, SQL, and VBA code to be more secure and performant; migrate all authentication systems to use SSO.
+      
+    \item Evaluate AI solutions for the Firm with respect to data privacy, security, and impact as a member of the Firm's AI Committee.
+      
+  \end{itemize}
+  \vspace{-2mm}
+  
 \end{small}
 \vspace{-2mm}
 
@@ -79,63 +80,68 @@
 \hrulefill
 
 \begin{large}
-\textsc{\textbf{Relevant Work Experience}}
-\vspace{-3mm}
+  \textsc{\textbf{Relevant Work Experience}}
+  \vspace{-3mm}
 \end{large}
 
 \textcolor{lightgray}{\hrulefill}\\
-\vspace{1mm}
 
 \begin{small}
+  
+  \textbf{Grant Thornton LLP} \hfill
+  \textcolor{gray}{Washington, DC}\\
+  \textit{Statistician} \hfill
+  \textcolor{gray}{May 2021 -- Aug 2022}\\
+  \vspace{-2mm}
 
-\textbf{Grant Thornton LLP} \hfill \textcolor{gray}{Washington, DC}\\
-\textit{Statistician} \hfill \textcolor{gray}{May 2021 -- Aug 2022}\\
-\vspace{-2mm}
+  \begin{itemize}
+      \setlength\itemsep{-1mm}
+      
+    \item Designed efficient statistical samples for federal and state taxes, audits, and other program analytic purposes, saving hundreds to thousands of staff hours per engagement.
+      
+    \item Helped win over \$8 million in government contract awards in 2022 by authoring technical sections related to statistical sampling and data analytics in RFPs.
+      
+    \item Researched and implemented efficient sampling methodologies and automated internal processes via R and Python scripting; conducted simulation studies to estimate sampling efficiency, statistical inference and prediction performance, and confidence coverage.
+      
+  \end{itemize}
+  \vspace{-2mm}
+  
+  \textbf{Cohen Milstein Sellers \& Toll, PLLC} \hfill
+  \textcolor{gray}{Washington, DC}\\
+  \textit{Data Analyst} \hfill
+  \textcolor{gray}{Jun 2016 -- May 2019}\\
+  \vspace{-2mm}
 
-\begin{itemize}
-\setlength\itemsep{-1mm}
+  \begin{itemize}
+      \setlength\itemsep{-1mm}
+      
+    \item Researched securities frauds and market manipulation involving various financial instruments; frequently worked with Antitrust or ERISA practice group attorneys to assist with financial data analysis.
+      
+    \item Analyzed trading data sets, recognized trends and patterns, validated data integrity; audited and monitored investment data for institutional investors to calculate potential damages relating to securities class actions.
+      
+    \item Developed custom data pipelines by integrating Bloomberg API, VBA, SQL, and Python to automate and assist with efficient data analysis, formatting, and validation.
+      
+  \end{itemize}
+  \vspace{-2mm}
+  
+  \textbf{RiskEcon Lab, New York University Courant Institute} \hfill
+  \textcolor{gray}{New York, NY}\\
+  \textit{Research Intern} \hfill
+  \textcolor{gray}{Oct 2015 -- May 2016}\\
+  \vspace{-2mm}
 
-\item Designed efficient statistical samples for federal and state taxes, audits, and other program analytic purposes, saving hundreds to thousands of staff hours per engagement.
-
-\item Helped win over \$8 million in government contract awards in 2022 by authoring technical sections related to statistical sampling and data analytics in RFPs.
-
-\item Researched and implemented efficient sampling methodologies and automated internal processes via R and Python scripting; conducted simulation studies to estimate sampling efficiency, statistical inference and prediction performance, and confidence coverage.
-
-\end{itemize}
-\vspace{-1mm}
-
-\textbf{Cohen Milstein Sellers \& Toll, PLLC} \hfill \textcolor{gray}{Washington, DC}\\
-\textit{Data Analyst} \hfill \textcolor{gray}{Jun 2016 -- May 2019}\\
-\vspace{-2mm}
-
-\begin{itemize}
-\setlength\itemsep{-1mm}
-
-\item Researched securities frauds and market manipulation involving various financial instruments; frequently worked with Antitrust or ERISA practice group attorneys to assist with financial data analysis.
-
-\item Analyzed trading data sets, recognized trends and patterns, validated data integrity; audited and monitored investment data for institutional investors to calculate potential damages relating to securities class actions.
-
-\item Developed custom solutions by integrating Bloomberg API, Excel, VBA, SQL, and Python to automate and assist with efficient data analysis, formatting, and validation.
-
-\end{itemize}
-\vspace{-1mm}
-
-\textbf{RiskEcon Lab, New York University Courant Institute} \hfill \textcolor{gray}{New York, NY}\\
-\textit{Research Intern} \hfill \textcolor{gray}{Oct 2015 -- May 2016}\\
-\vspace{-2mm}
-
-\begin{itemize}
-\setlength\itemsep{-1mm}
-
-\item Aggregated and analyzed biodiversity data from proprietary and federal databases; reviewed literature on biodiversity data collection methods.
-
-\item Analyzed quantitative data from the railroad transporation industry to implement a financial model that considers potential economic and environmental losses due to derailments.
-
-\item Impacted policies and legislation at the state level by identifying challenges and problems through data-driven analysis; prepared and presented statistical reports to advocacy groups.
-
-\end{itemize}
-\vspace{-1mm}
-
+  \begin{itemize}
+      \setlength\itemsep{-1mm}
+      
+    \item Aggregated and analyzed biodiversity data from proprietary and federal databases; reviewed literature on biodiversity data collection methods.
+      
+    \item Analyzed quantitative data from the railroad transportation industry to implement a financial model that considers potential economic and environmental losses due to derailments.
+      
+    \item Impacted policies and legislation at the state level by identifying challenges and problems through data-driven analysis; prepared and presented statistical reports to advocacy groups.
+      
+  \end{itemize}
+  \vspace{-2mm}
+  
 \end{small}
 \vspace{-2mm}
 
@@ -144,28 +150,31 @@
 \hrulefill
 
 \begin{large}
-\textsc{\textbf{Education}}
-\vspace{-3mm}
+  \textsc{\textbf{Education}}
+  \vspace{-3mm}
 \end{large}
 
 \textcolor{lightgray}{\hrulefill}\\
-\vspace{1mm}
 
 \begin{small}
+  
+  \textbf{George Mason University - Volgenau School of Engineering} \hfill
+  \textcolor{gray}{Fairfax, VA}
 
-\textbf{George Mason University - Volgenau School of Engineering} \hfill \textcolor{gray}{Fairfax, VA}
+  \textit{Master of Science -- Statistics} \hfill
+  \textcolor{gray}{Gradudated May 2021}
 
-\textit{Master of Science -- Statistics} \hfill \textcolor{gray}{Gradudated May 2021}
+  \vspace{1mm}
+  
+  \textbf{New York University - Stern School of Business} \hfill
+  \textcolor{gray}{New York, NY}
 
-\vspace{2mm}
+  \textit{Bachelor of Science -- Accounting and Business Statistics} \hfill
+  \textcolor{gray}{Gradudated May 2016}
 
-\textbf{New York University - Stern School of Business} \hfill \textcolor{gray}{New York, NY}
-
-\textit{Bachelor of Science -- Accounting and Business Statistics} \hfill \textcolor{gray}{Gradudated May 2016}
-
-\vspace{2mm}
-
-\vspace{-2mm}
+  \vspace{1mm}
+  
+  \vspace{-2mm}
 \end{small}
 
 
@@ -173,15 +182,14 @@
 \hrulefill
 
 \begin{large}
-\textsc{\textbf{Technical Skills}}
-\vspace{-3mm}
+  \textsc{\textbf{Technical Skills}}
+  \vspace{-3mm}
 \end{large}
 
 \textcolor{lightgray}{\hrulefill}\\
-\vspace{1mm}
 
 \begin{small}
-Python, SQL, Linux, Bash, VBA, Git, R, Azure, SAS
+  Python, SQL, Linux, Bash, VBA, Git, R, Azure, SAS
 \end{small}
 
 
