--- a/pages/resume.tex
+++ b/pages/resume.tex
@@ -63,7 +63,7 @@
       
     \item Lead the design, implementation, maintenance, and optimization of data pipelines, databases, and application infrastructures.
       
-    \item Develop Python apps that automate existing processes, create data solutions for litigation support, or assist in case development.
+    \item Develop Python apps that automate existing processes, create data solutions for ligitation support, or assist in case development.
       
     \item Modernize legacy Python, SQL, and VBA code to be more secure and performant; migrate all authentication systems to use SSO.
       
