--- a/pages/resume.tex
+++ b/pages/resume.tex
@@ -3,6 +3,7 @@
 \definecolor{darkgray}{HTML}{333333}
 \definecolor{lightgray}{HTML}{999999}
 \usepackage{geometry}
+\usepackage{enumitem}
 \setlength\parindent{0pt}
 \usepackage{hyperref}
 \usepackage{bold-extra}
@@ -52,20 +53,26 @@
 
 \begin{small}
   
-  \textbf{Cohen Milstein Sellers \& Toll, PLLC} \hfill
-  \textcolor{gray}{Washington, DC}\\
-  \textit{Data Engineer} \hfill
-  \textcolor{gray}{Sep 2022 -- Present}\\
-  \vspace{-1mm}
+  \textbf{Cohen Milstein Sellers \& Toll, PLLC} \hfill \textcolor{gray}{Washington, DC}
+  
+  \textit{Senior Data Engineer} \hfill 
+  \textcolor{gray}{Jan 2026 -- Present}
+  
+  
+  \textit{Data Engineer} \hfill 
+  \textcolor{gray}{Sep 2022 -- Dec 2025}
+  
+  
+  \vspace{-2mm}
 
-  \begin{itemize}
+  \begin{itemize}[leftmargin=0.5cm]
       \setlength\itemsep{-1mm}
       
-    \item Lead the design, implementation, maintenance, and optimization of data pipelines, databases, and application infrastructures.
+    \item Develop Python solutions that help find new case opportunities, streamline ETL processes, or provide user interfaces for various scripts; create and maintain data solutions for ligitation support.
       
-    \item Develop Python apps that automate existing processes, create data solutions for ligitation support, or assist in case development.
+    \item Refactor or replace legacy Python, SQL, and VBA code to keep up with modern security and coding standards; migrate all authentication systems to use SSO.
       
-    \item Modernize legacy Python, SQL, and VBA code to be more secure and performant; migrate all authentication systems to use SSO.
+    \item Design, implement, maintain, and optimize data pipelines, databases, and cloud infrastructures.
       
     \item Evaluate AI solutions for the Firm with respect to data privacy, security, and impact as a member of the Firm's AI Committee.
       
@@ -88,13 +95,19 @@
 
 \begin{small}
   
-  \textbf{Grant Thornton LLP} \hfill
-  \textcolor{gray}{Washington, DC}\\
-  \textit{Statistician} \hfill
-  \textcolor{gray}{May 2021 -- Aug 2022}\\
+  \textbf{Grant Thornton LLP} \hfill \textcolor{gray}{Washington, DC}
+  
+  \textit{Manager -- Statistician} \hfill 
+  \textcolor{gray}{Aug 2022}
+  
+  
+  \textit{Senior Associate -- Statistician} \hfill 
+  \textcolor{gray}{May 2021 -- July 2022}
+  
+  
   \vspace{-2mm}
 
-  \begin{itemize}
+  \begin{itemize}[leftmargin=0.5cm]
       \setlength\itemsep{-1mm}
       
     \item Designed efficient statistical samples for federal and state taxes, audits, and other program analytic purposes, saving hundreds to thousands of staff hours per engagement.
@@ -106,13 +119,15 @@
   \end{itemize}
   \vspace{-2mm}
   
-  \textbf{Cohen Milstein Sellers \& Toll, PLLC} \hfill
-  \textcolor{gray}{Washington, DC}\\
-  \textit{Data Analyst} \hfill
-  \textcolor{gray}{Jun 2016 -- May 2019}\\
+  \textbf{Cohen Milstein Sellers \& Toll, PLLC} \hfill \textcolor{gray}{Washington, DC}
+  
+  \textit{Data Analyst} \hfill 
+  \textcolor{gray}{Jun 2016 -- May 2019}
+  
+  
   \vspace{-2mm}
 
-  \begin{itemize}
+  \begin{itemize}[leftmargin=0.5cm]
       \setlength\itemsep{-1mm}
       
     \item Researched securities frauds and market manipulation involving various financial instruments; frequently worked with Antitrust or ERISA practice group attorneys to assist with financial data analysis.
@@ -124,13 +139,15 @@
   \end{itemize}
   \vspace{-2mm}
   
-  \textbf{RiskEcon Lab, New York University Courant Institute} \hfill
-  \textcolor{gray}{New York, NY}\\
-  \textit{Research Intern} \hfill
-  \textcolor{gray}{Oct 2015 -- May 2016}\\
+  \textbf{RiskEcon Lab, New York University Courant Institute} \hfill \textcolor{gray}{New York, NY}
+  
+  \textit{Research Intern} \hfill 
+  \textcolor{gray}{Oct 2015 -- May 2016}
+  
+  
   \vspace{-2mm}
 
-  \begin{itemize}
+  \begin{itemize}[leftmargin=0.5cm]
       \setlength\itemsep{-1mm}
       
     \item Aggregated and analyzed biodiversity data from proprietary and federal databases; reviewed literature on biodiversity data collection methods.
@@ -189,7 +206,7 @@
 \textcolor{lightgray}{\hrulefill}\\
 
 \begin{small}
-  Python, SQL, Linux, Bash, VBA, Git, R, Azure, SAS
+  Python, SQL, Linux, Bash, VBA, Git, R, Nix, Azure, SAS
 \end{small}
 
 
