update website with new pictures

--- a/pages/resume.tex
+++ b/pages/resume.tex
@@ -68,7 +68,7 @@
   \begin{itemize}[leftmargin=0.5cm]
       \setlength\itemsep{-1mm}
       
-    \item Develop Python solutions that help find new case opportunities, streamline ETL processes, or provide user interfaces for various scripts; create and maintain data solutions for ligitation support.
+    \item Develop Python solutions that help find new case opportunities, streamline ETL processes, or provide user interfaces for various scripts; create and maintain data solutions for litigation support.
       
     \item Refactor or replace legacy Python, SQL, and VBA code to keep up with modern security and coding standards; migrate all authentication systems to use SSO.
       
