update resume format

--- a/pages/resume.tex
+++ b/pages/resume.tex
@@ -175,7 +175,7 @@
 
 \begin{small}
   
-  \textbf{George Mason University - Volgenau School of Engineering} \hfill
+  \textbf{George Mason University -- Volgenau School of Engineering} \hfill
   \textcolor{gray}{Fairfax, VA}
 
   \textit{Master of Science -- Statistics} \hfill
@@ -183,7 +183,7 @@
 
   \vspace{1mm}
   
-  \textbf{New York University - Stern School of Business} \hfill
+  \textbf{New York University -- Stern School of Business} \hfill
   \textcolor{gray}{New York, NY}
 
   \textit{Bachelor of Science -- Accounting and Business Statistics} \hfill
